--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
+    "semantic-ui-css": "^2.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
