--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/router": "~13.1.0",
     "@fortawesome/angular-fontawesome": "^0.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "ngx-owl-carousel-o": "^7.0.1",
     "rxjs": "~7.4.0",
     "semantic-ui-css": "^2.4.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
